log
Sat Apr 18 01:21:24 AM UTC 2026: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 5/60
b8559e7
Sat Apr 18 10:00:17 PM UTC 2026: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:80:26: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘buquets’; did you mean ‘buckets’?
   80 |         if(is_equal(map->buquets[pos]->key, key))
      |                          ^~~~~~~
      |                          buckets
10f4dda
Sat Apr 18 10:00:43 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
8756491
Sun Apr 19 01:57:52 AM UTC 2026: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
5ee0193
Sun Apr 19 03:33:06 AM UTC 2026: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 40/60
3761e39
Sun Apr 19 06:41:54 PM UTC 2026: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 40/60
20b56bc
Sun Apr 19 09:56:32 PM UTC 2026: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  12|2
total_score: 40/60
3eb7bbd
Sun Apr 19 09:58:27 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 50/60
1c52a16
Sun Apr 19 09:59:18 PM UTC 2026: 
 tests:  16|1
total_score: 50/60
dc57797
Mon Apr 20 01:50:40 AM UTC 2026: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:185:32: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘buquets’; did you mean ‘buckets’?
  185 |     Pair ** old_buckets = map->buquets;
      |                                ^~~~~~~
      |                                buckets
7a1b2e0
Mon Apr 20 01:51:18 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
607692c
Mon Apr 20 01:53:24 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 60/60
be91b5d
